# Intro-to-RAG-Agentic-RAG-2602

./: README.md  StarWarsOpeningCrawls.md
agentic-rag-second-brain/: .env.example  README.md  environment.yml  pyproject.toml
agentic-rag-second-brain/data/processed/chroma/: chroma.sqlite3  index_store.json
agentic-rag-second-brain/data/raw/notes/: 2025-01-10-embedding-model-cost-first.md  2025-02-02-chunking-large-windows.md  2025-03-07-meeting-search-quality.md  2025-03-18-embedding-evaluation-q1.md  2025-04-14-chunking-feedback.md  2025-05-22-research-hybrid-retrieval.md  2025-06-30-meeting-onboarding-notes.md  2025-07-05-embedding-model-quality-shift.md  2025-08-15-research-metadata-schema.md  2025-09-03-chunking-small-overlap.md  2025-10-02-meeting-demo-retro.md  2025-10-21-embedding-rollout-postmortem.md  2025-11-12-chunking-maintenance.md  2025-12-01-roadmap-notes-q1.md
agentic-rag-second-brain/eval/: golden_questions.jsonl
agentic-rag-second-brain/notebooks/: 00_setup.ipynb  01_dataset_and_ingestion_llamaindex.ipynb  02_indexing_chroma_llamaindex.ipynb  03_baseline_rag.ipynb  04_agentic_rag_langgraph.ipynb  05_eval.ipynb
agentic-rag-second-brain/src/: __init__.py  config.py  dataset.py  eval.py  eval_judge.py  graph.py  index_store.py  ingestion.py  prompts.py  rag_baseline.py  retrieval.py
data/: sample_knowledge.csv
notebooks/: simple_rag_from_csv.ipynb
