[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-rag-second-brain"
version = "0.1.0"
description = "Setup and ingestion notebooks for timeframe drift dataset with LlamaIndex"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "llama-index==0.11.23",
  "python-dotenv==1.0.1",
  "pandas==2.2.3",
  "ipykernel==6.29.5",
]

[tool.setuptools]
packages = ["src"]
