[project]
name = "agentic-rag-second-brain"
version = "0.1.0"
description = "Setup, dataset preparation, and ingestion pipeline scaffold for an agentic RAG second brain project."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Your Name" }]
dependencies = [
  "python-dotenv>=1.0.1",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.1",
  "pandas>=2.2.2",
  "llama-index>=0.10.45",
  "jupyterlab>=4.2.0",
  "ipykernel>=6.29.4",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
