[project]
name = "agentic-rag-second-brain"
version = "0.1.0"
description = "Setup, dataset preparation, and ingestion pipeline scaffold for an agentic RAG second brain project."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Your Name" }]
dependencies = [
  "python-dotenv==1.0.1",
  "pydantic==2.10.6",
  "pydantic-settings==2.7.1",
  "pandas==2.2.3",
  "llama-index==0.12.19",
  "llama-index-embeddings-openai==0.3.1",
  "llama-index-vector-stores-chroma==0.4.1",
  "openai==1.61.1",
  "chromadb==0.5.23",
  "langchain==0.3.19",
  "langchain-core==0.3.40",
  "langchain-openai==0.3.6",
  "langgraph==0.2.74",
  "jupyterlab==4.3.5",
  "ipykernel==6.29.5",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
